# sports-prediction-os

./: .gitignore  AGENTS.md  NOTICE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
config/: sources.yaml
data/sample/: match-26618.json
ops/: STATUS.md
scripts/: spec_check.py  validate_sensitive_disclosures.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0003-ops-ledger/: acceptance.md  design.md  requirements.md  tasks.md
src/sports_os/: __init__.py  analysis.py  cli.py  registry.py
src/sports_os/ops/: __init__.py  run_manifest.py
src/sports_os/sources/: __init__.py  understat.py
tests/: test_cli.py  test_foundation.py  test_registry.py  test_run_manifest.py  test_show.py  test_understat.py
tests/fixtures/understat/: 12345.json  match_page.html
